<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/layoutMain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:background="@drawable/backgroumd">

            <ProgressBar
                android:id="@+id/imgProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <ImageView
                android:id="@+id/imgAdds"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/backgroumd"
                android:visibility="gone" />

            <ImageView
                android:background="@drawable/rounded_circle"
                android:id="@+id/imgClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:src="@drawable/close" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/layoutEmailAdd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edtEmailAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:background="@drawable/edittext_back"
                android:hint="@string/enter_email_hint"
                android:padding="10dp"
                android:singleLine="true" />


            <TextView
                android:id="@+id/btnSend"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/edtEmailAddress"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corcle"
                android:fontFamily="serif"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/send"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp">


            <ImageView
                android:id="@+id/imgAppIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:src="@drawable/backgroumd" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/imgAppIcon"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:singleLine="true"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDescription"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/app_desc" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layoutEnterMail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#24ae5f"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="serif"
                android:padding="20dp"
                android:text="@string/enter_email"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>